force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Calculate_Affiliation_Score__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Calculate_Affiliation_Score__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Technical Field. Depicts if batch process needs to recalculate the affiliation&apos;s Lead Score.</description>
    <label>Calculate Affiliation Score</label>
    <type>Checkbox</type>
</CustomField>