force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Campus_Interest__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Campus_Interest__c</fullName>
    <description>Added for IST 43</description>
    <inlineHelpText>Gives Campus preference for the contact</inlineHelpText>
    <label>Campus Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Campus</valueSetName>
    </valueSet>
</CustomField>