force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Career_Area__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Career_Area__c</fullName>
    <description>Student Lead (Dom) Affiliation&apos;s Career Interest</description>
    <inlineHelpText>If the exact area is not listed, please select the closest value.</inlineHelpText>
    <label>Career Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_RM_Study_Interest__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>I_ST_Career_Interest</valueSetName>
    </valueSet>
</CustomField>