force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Contact__c</fullName>
    <description>The person/contact who this Affiliation relates to</description>
    <inlineHelpText>The person this affiliation relates to</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Affiliations</relationshipLabel>
    <relationshipName>Affiliations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>