force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Contact_School__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Contact_School__c</fullName>
    <description>Shows the College from Contact (I_RS_School__c) based on the Unit/Dept/school/college level</description>
    <formula>I_RM_Contact__r.I_RS_School__c</formula>
    <label>School</label>
    <type>Text</type>
</CustomField>