force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Cost_Centre__c</fullName>
    <description>Depicts to the Cost Centre from Contact, This is used for Staff and GRS records</description>
    <formula>I_RM_Contact__r.I_RS_Cost_Centre__r.Name</formula>
    <label>Cost Centre</label>
    <type>Text</type>
</CustomField>