force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Course_Availability__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Course_Availability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Facilitate the relationship with the Course Availability object applicable to Student Lead (Dom) and Student Applicant (Dom)</description>
    <inlineHelpText>Course Availabilities related to the selected Course Code</inlineHelpText>
    <label>Course Availability</label>
    <referenceTo>CourseAvailability__c</referenceTo>
    <relationshipLabel>Affiliations</relationshipLabel>
    <relationshipName>Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>