force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Course_Instance_Version_Year__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Course_Instance_Version_Year__c</fullName>
    <description>Depicts the Course Availability Year</description>
    <formula>I_RM_Course_Availability__r.L_AD_CourseInstance__r.L_AD_Course_Instance_Version_Year__c</formula>
    <inlineHelpText>This shows the Course Availability Year</inlineHelpText>
    <label>Course Instance Version Year</label>
    <type>Text</type>
</CustomField>