force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Course_Location__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Course_Location__c</fullName>
    <formula>I_RM_Course_Availability__r.L_AD_CourseInstance__r.L_AD_Campus_Name__c</formula>
    <inlineHelpText>This shows the Campus from Course Availability</inlineHelpText>
    <label>Campus</label>
    <type>Text</type>
</CustomField>