force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Course_Parent__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Course_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Display the course the Lead is interested in. Filtered to include only active courses</description>
    <label>Course of Interest (Dom)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CourseParent__c.L_AD_Course_Parent_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>CourseParent__c.I_IL_Dom_Course_Flag__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>CourseParent__c.L_AD_Published_On_Find_A_Course__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CourseParent__c</referenceTo>
    <relationshipLabel>Affiliations</relationshipLabel>
    <relationshipName>Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>