force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Course_School__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Course_School__c</fullName>
    <description>This field Shows the School from Course Availability</description>
    <formula>IF( ISBLANK( I_RM_Course_Availability__c ), &apos;N/A&apos;, I_RM_Course_Availability__r.L_AD_CourseInstance__r.I_ST_School_Name__c )</formula>
    <inlineHelpText>Shows the value of school from Course Availability</inlineHelpText>
    <label>Course School</label>
    <type>Text</type>
</CustomField>