force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Course_Study_Period__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Course_Study_Period__c</fullName>
    <description>This field Shows the School from Course Availability</description>
    <formula>TEXT(I_RM_Course_Availability__r.L_AD_Intake_Period__r.L_AD_Intake_Period_Name__c)</formula>
    <inlineHelpText>Shows the Course Availability&apos;s Intake Period</inlineHelpText>
    <label>Intake Period</label>
    <type>Text</type>
</CustomField>