force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Course_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Course_Type_Name__c</fullName>
    <description>This field Shows Course Name of selected Course Code.</description>
    <formula>I_RM_Course_Parent__r.L_AD_Award_Title__c</formula>
    <inlineHelpText>Course Name of selected Course Code</inlineHelpText>
    <label>Course Name</label>
    <type>Text</type>
</CustomField>