force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Data_Source__c</fullName>
    <description>Technical Field. Global picklist to represent the original source of the record</description>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Source</valueSetName>
    </valueSet>
</CustomField>