force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Department__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Department__c</fullName>
    <description>References to Contact Department field.</description>
    <formula>I_RM_Contact__r.I_RS_Department__c</formula>
    <label>Department</label>
    <type>Text</type>
</CustomField>