force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Description__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Description__c</fullName>
    <description>Details of how the person and organization are affiliated.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>