force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_DoNotCall__c.field-meta.xml
<CustomField>
    <fullName>I_RM_DoNotCall__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Depicts if the affiliation is not to be contact via phone</description>
    <label>DoNotCall</label>
    <type>Checkbox</type>
</CustomField>