force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Email__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Email__c</fullName>
    <description>Depicts Personal Email</description>
    <inlineHelpText>The personal email for this person.</inlineHelpText>
    <label>Personal Email</label>
    <type>Email</type>
</CustomField>