force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_EmailOptOut__c.field-meta.xml
<CustomField>
    <fullName>I_RM_EmailOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Depicts if the affiliation is not to be contacted via email</description>
    <label>EmailOptOut</label>
    <type>Checkbox</type>
</CustomField>