force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_EndDate__c.field-meta.xml
<CustomField>
    <fullName>I_RM_EndDate__c</fullName>
    <description>Depicts Affiliations End Date.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>