force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Enquirer_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Enquirer_Type__c</fullName>
    <description>Depicts how best to describe the Enquirer, Applicable for Student Lead (Dom),Student Applicant (Dom) and Secondary School Rep</description>
    <inlineHelpText>This is the Enquirer Type</inlineHelpText>
    <label>What best describes you?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Enquirer_Type</valueSetName>
    </valueSet>
</CustomField>