force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_External_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RM_External_Id__c</fullName>
    <description>This field is used as unique id from source system(s)</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>