force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Flagship_Course__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Flagship_Course__c</fullName>
    <description>References Course Parent Flagship Course checkbox</description>
    <formula>I_RM_Course_Parent__r.I_ST_Flagship_Course__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flagship Course</label>
    <type>Checkbox</type>
</CustomField>