force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_FTE_Ratio__c.field-meta.xml
<CustomField>
    <fullName>I_RM_FTE_Ratio__c</fullName>
    <description>This is the Full-Time Equivalent Ratio</description>
    <label>FTE Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>