force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Incremental_Score__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Incremental_Score__c</fullName>
    <description>This field is used for automated Contact scoring</description>
    <label>Activity Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>