force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Inferred_Time_Frame_to_Study__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Inferred_Time_Frame_to_Study__c</fullName>
    <description>Used for Lead Affiliations</description>
    <label>Inferred Time Frame to Study</label>
    <length>255</length>
    <type>Text</type>
</CustomField>