force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_International_Student__c.field-meta.xml
<CustomField>
    <fullName>I_RM_International_Student__c</fullName>
    <description>This field is derived from Contact International Student Checkbox</description>
    <formula>I_RM_Contact__r.I_ST_International_Student__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>International Student</label>
    <type>Checkbox</type>
</CustomField>