force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Lead_Id__c</fullName>
    <description>Depicts Lead&apos;s ID Auto number field.Displayed only on Student Lead (Dom)</description>
    <displayFormat>{YYYY}-{0000}</displayFormat>
    <label>Lead Id</label>
    <type>AutoNumber</type>
</CustomField>