force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Lead_Source_Category__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Lead_Source_Category__c</fullName>
    <description>Depicts the source of the Affiliation</description>
    <label>Source Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Lead_Source_Category</valueSetName>
    </valueSet>
</CustomField>