force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Lead_Source_sub_category__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Lead_Source_sub_category__c</fullName>
    <description>Depicts the sub source of the Affiliation</description>
    <label>Source Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_RM_Lead_Source_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>I_ST_Lead_Source_sub_category</valueSetName>
    </valueSet>
</CustomField>