force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Mailing_Country__c</fullName>
    <description>Mailing Address Country</description>
    <label>Mailing Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_RM_Country</valueSetName>
    </valueSet>
</CustomField>