force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Mailing_Postcode__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Mailing_Postcode__c</fullName>
    <description>Mailing Address Postcode</description>
    <label>Mailing Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>