force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Mailing_State__c</fullName>
    <description>Mailing Address State</description>
    <label>Mailing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>