force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Mailing_Street__c</fullName>
    <description>Mailing Address Street</description>
    <label>Mailing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>