force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Mailing_Suburb__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Mailing_Suburb__c</fullName>
    <description>Mailing Address Suburb</description>
    <label>Mailing City/Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>