force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Manager_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Manager_Contact__c</fullName>
    <description>Contact who is manager of this person. Is based from Manager Staff Id field. May or may not have a user attached.
For HDR + Staff Affiliations.</description>
    <formula>I_RM_Contact__r.I_RS_Manager_Contact__r.I_RS_Full_Name__c</formula>
    <label>Manager</label>
    <type>Text</type>
</CustomField>