force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Manager_Staff_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Manager_Staff_ID__c</fullName>
    <description>Derived from Contacts manager staff ID, to represent the manager of the contact.</description>
    <formula>I_RM_Contact__r.I_RS_Manager_Staff_ID__c</formula>
    <label>Manager Staff ID</label>
    <type>Text</type>
</CustomField>