force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_ORCID_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RM_ORCID_ID__c</fullName>
    <description>ORCID id derived from contact</description>
    <formula>I_RM_Contact__r.I_RS_ORCID_ID__c</formula>
    <inlineHelpText>This is the “Open Researcher and Contributor ID”.</inlineHelpText>
    <label>ORCID ID</label>
    <type>Text</type>
</CustomField>