force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Other_Phone__c</fullName>
    <description>Depicts affiliation&apos;s Work Phone number</description>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>