force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Person_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Person_Application_Id__c</fullName>
    <externalId>true</externalId>
    <label>Person Application Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>