force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Position_Title__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Position_Title__c</fullName>
    <description>Position title for this Affiliation</description>
    <label>Position Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>