force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Postcode__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Postcode__c</fullName>
    <description>Post Code of work / home address.</description>
    <label>Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>