force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Preferred_Channel_of_Communication__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Preferred_Channel_of_Communication__c</fullName>
    <description>Depicts preferred Channel of Communication</description>
    <label>Preferred Channel of Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Preferred_Channel_Communication</valueSetName>
    </valueSet>
</CustomField>