force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Prospective_International_Student__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Prospective_International_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate whether this Affiliation is a prospective International student</description>
    <label>Prospective International Student</label>
    <type>Checkbox</type>
</CustomField>