force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_RANK__c.field-meta.xml
<CustomField>
    <fullName>I_RM_RANK__c</fullName>
    <description>Calculated based on Total Score as &quot;Cold/Warm/Hot/Sizzling&quot;</description>
    <formula>IF( I_RM_Total_Score__c&gt;75 , &apos;Sizzling&apos;, IF( I_RM_Total_Score__c&lt;=75&amp;&amp; I_RM_Total_Score__c&gt;50 , &apos;Hot&apos;,IF( I_RM_Total_Score__c&lt;=50&amp;&amp; I_RM_Total_Score__c&gt;25 , &apos;Warm&apos;,&apos;Cold&apos;)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rank</label>
    <type>Text</type>
</CustomField>