force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Role__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Role__c</fullName>
    <description>This represents the role of the affiliation</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Domestic Lead</fullName>
                <label>Student Lead (Dom)</label>
            </value>
            <value>
                <fullName>Applicant</fullName>
                <label>Student Applicant (Dom)</label>
            </value>
            <value>
                <fullName>La Trobe Staff</fullName>
            </value>
            <value>
                <fullName>School Representative</fullName>
                <label>Secondary School Representative</label>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>External Contact</fullName>
            </value>
            <value>
                <fullName>HDR Student</fullName>
                <label>Graduate Researcher</label>
            </value>
            <value>
                <fullName>Student Lead (Int)</fullName>
            </value>
            <value>
                <fullName>Nominated Affiliation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>