force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Score__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Score__c</fullName>
    <description>This Fields shows the calculated score of an affiliation based on key attributes being populated</description>
    <label>Affiliation Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>