force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Staff_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Staff_Group_Code__c</fullName>
    <description>An alphanumeric code from the HR system that denotes the type of work.  For example 1= Continuing Full Time or C=Casual</description>
    <label>Staff Group Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>