force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Staff_Group_Desc__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Staff_Group_Desc__c</fullName>
    <description>This is the description that matches the staff group code. For example &quot;Continuing Full Time&quot;</description>
    <label>Staff Group Description</label>
    <type>TextArea</type>
</CustomField>