force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Staff_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Staff_Id__c</fullName>
    <description>Derived from Contact applicable to staff /GRS Role</description>
    <formula>I_RM_Contact__r.I_RS_Staff_ID__c</formula>
    <label>Staff Id</label>
    <type>Text</type>
</CustomField>