force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Staff_Sub_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Staff_Sub_Group_Code__c</fullName>
    <description>An alphanumeric code from the HR system that is used by research to determine if you are employed in a research, professional or honorary capacity. For example A1= Aca-Teaching &amp; Resea</description>
    <label>Staff Sub Group Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>