force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Staff_Sub_Group_Desc__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Staff_Sub_Group_Desc__c</fullName>
    <description>This is the description that matches the staff sub group code. For example Aca-Teaching and Resea or Professional</description>
    <label>Staff SubGroup Description</label>
    <type>TextArea</type>
</CustomField>