force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_StartDate__c.field-meta.xml
<CustomField>
    <fullName>I_RM_StartDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Depicts Affiliations Start Date</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>