force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_State__c.field-meta.xml
<CustomField>
    <fullName>I_RM_State__c</fullName>
    <description>State of the Work/Home address</description>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>