force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Status__c</fullName>
    <description>Indicates the status of the Affiliation.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_RM_Role__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>I_ST_Contact_Status</valueSetName>
    </valueSet>
</CustomField>