force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Street__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Street__c</fullName>
    <description>Street of the Work/Home address</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>