force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Student_Email__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Student_Email__c</fullName>
    <description>Depicts Students Email address</description>
    <inlineHelpText>The student email for this person.</inlineHelpText>
    <label>Student Email</label>
    <type>Email</type>
</CustomField>