force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Student_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Student_Id__c</fullName>
    <description>This field derived from Contact Student ID field</description>
    <formula>I_RM_Contact__r.I_RS_Student_Id__c</formula>
    <label>Student Id</label>
    <type>Text</type>
</CustomField>