force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Study_Interest__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Study_Interest__c</fullName>
    <description>Student Lead (Dom) Affiliation&apos;s Study Interest</description>
    <label>Study Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Study_Interest</valueSetName>
    </valueSet>
</CustomField>