force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Study_Level__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Study_Level__c</fullName>
    <description>Student Lead (Dom) Affiliation&apos;s Level of Study</description>
    <label>Study Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Study_Level</valueSetName>
    </valueSet>
</CustomField>