force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Time_Frame_to_Study__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Time_Frame_to_Study__c</fullName>
    <description>Student Lead (Dom) Affiliation&apos;s time trame to study.</description>
    <label>Time Frame to Study</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Time_Frame_to_Study</valueSetName>
    </valueSet>
</CustomField>