force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Total_Score__c</fullName>
    <description>Technical field. Based on Score + Incremental_Score + Adjustment_Score.</description>
    <formula>I_RM_Score__c + I_RM_Incremental_Score__c + I_RM_Adjustment_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>