force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Work_Email__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Work_Email__c</fullName>
    <description>Depicts Work Email address</description>
    <inlineHelpText>Note: Graduate researchers, this is their institutional email (or staff email if they are also staff)</inlineHelpText>
    <label>Work Email</label>
    <type>Email</type>
</CustomField>