force-app/main/default/objects/I_RM_Affiliation__c/fields/L_PR_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Business Development and Marketing</fullName>
            </value>
            <value>
                <fullName>Finance and Invoicing</fullName>
            </value>
            <value>
                <fullName>Legal and Compliance</fullName>
            </value>
            <value>
                <fullName>Senior Leader/Owner/CEO</fullName>
            </value>
            <value>
                <fullName>Application/Visa Processing</fullName>
            </value>
            <value>
                <fullName>Student Administration/Counselling</fullName>
            </value>
            <value>
                <fullName>Institutional Partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>