force-app/main/default/objects/I_RM_Affiliation__c/fields/L_PR_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Contact_Name__c</fullName>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>