force-app/main/default/objects/I_RM_Affiliation__c/fields/L_PR_Disicipline__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Disicipline__c</fullName>
    <label>Disciplines</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>L_PR_Discipline</valueSetName>
    </valueSet>
</CustomField>