force-app/main/default/objects/I_RM_Affiliation__c/fields/L_PR_Organisation_Alert_IMG__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Organisation_Alert_IMG__c</fullName>
    <formula>IF(I_RM_Account__r.L_PR_Alert__c, IMAGE(&quot;/resource/1660132033000/OrganisationAlert&quot;,&quot;Yellow&quot;,30,30),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if an active alert exists on the related Organisation</inlineHelpText>
    <label>Organisation Alert</label>
    <type>Text</type>
</CustomField>